Changes are made for the API Development in the Delivery Module ,deletes some MODEL for it and created new ones,repository created.PLease change the program.cs file cause i added my connection string in it

--- a/Foodie.csproj
+++ b/Foodie.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\For_Customer\" />
+    <Folder Include="Repositories\For_Restaurant\" />
+  </ItemGroup>
+
 </Project>
