--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=OZSRV11\\ADMINSSM;Initial Catalog=DB_FOODIE;User ID=sa;Password=sa@1234;Encrypt=False"
+  }
 }
